<resources>
    <string name="app_name">KHETTECH</string>
    <string name="add_plant">Add Plant</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="search_plants">Search Plants</string>
    <string name="disease_detection">Disease Detetction</string>
    <string name="add_your_plant">Add Your Plant</string>
    <string name="tips_and_tricks">Tips And Tricks</string>
    <string name="movement_alert">Movement Alert!!</string>
    <string name="make_your_own_plant_journal">Make Your Own Plant Journal</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="get_tips_for_your_green_friend">Get Tips For Your Green Friend</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_description">Plant Description</string>
    <string name="please_wait">Please Wait...</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="report_your_problem">Report Your Problem</string>
    <string name="description_max_300_words">Description (Max 300 words)</string>
    <string name="submit">Submit</string>
    <string name="message_1">Disease Name: Botrytis (or gray mold).
        Symptoms: Gray mold appears on the leaves, stem, flowers, and fruit.
        Environment: This fungus grows in mild and humid environments, in poorly ventilated spaces.
        Treatment: To prevent this fungus from appearing during cultivation, make sure to properly space the plants when planting. Cut off the parts that have been infected, then spray Bordeaux mixture over all parts of the plant.
</string>
    <string name="message_2">Disease Name: Circoporiosis.
        Symptoms: Gray spots appear on the leaves.
        Environment: This fungus appears during cold weather in wet environments.
        Treatment: Treat diseased leaves with Bordeaux mixture or sulfur. To prevent the disease, make sure to properly space the plants when planting.
</string>
    <string name="message_3">Disease Name: Fusariosis.
        Symptoms: The plant wilts. The root rots. The leaves turn yellow.
        Environment: This fungus develops in heavy, wet, and poorly aerated soil.
        Treatment: Sprinkle the plant with an organic, sulfur or copper-based fungicide.
</string>
    <string name="message_4">Disease Name: Downy mildew.
        Symptoms: Brown spots appear on the leaves. The leaves then begin to fall to the ground.
        Environment: This fungus develops in very hot weather and significant humidity.
        Treatment: When spots appear on the leaves, cut the infected leaves off so they do not contaminate other plants. Then spray Bordeaux mixture on the leaves. Apply nettle slurry to the leaves after watering.
</string>
    <string name="message_5">Disease Name: Powdery mildew.
        Symptoms: A white layer appears on the leaves (a mold is forming).
        Environment: This fungus develops in hot, very humid environments.
        Treatment: Properly space the plants at the time of planting. Cut off any infected leaves. Then spray the leaves with a mixture of milk and water (around 17 ounces of milk and one gallon of water) each week.
</string>
    <string name="message_6">Disease Name: Phytophtora cinnamoni.
        Symptoms: The leaves and stem wilt, turn yellow, and dry out.The root rots.
        Environment: This fungus develops in hot and wet environments.
        Treatment: Cut and burn infected leaves to avoid contamination of surrounding plants, then spray Bordeaux mixture on the leaves.
</string>
    <string name="message_7">Disease Name: Ramularia.
        Symptoms: Light brown spots appear. Leaves then dry out.
        Environment: The fungus appears in hot, very humid environments, in poorly aerated spaces.
        Treatment: To do as much as possible to prevent this disease from appearing, space plants well in rows at the time of planting. Cut off the leaves that have been infected, then spray Bordeaux mixture over the leaves.
</string>
    <string name="message_8">Disease Name: Blight.
        Symptoms: Red spots form on the leaves, causing the leaves to fall.
        Environment: This fungus develops when the weather is wet or when plants are too frequently watered. The fungus can appear starting in the beginning of spring through the end of summer.
        Treatment: When the first signs of the disease appear, cut and then burn infected leaves to avoid contaminating other plants. Then spray the leaves with a sulfur solution, horsetail slurry, or nettle slurry.
</string>
    <string name="message_9">Disease Name: Flea beetles.
        Symptoms: Holes appear in the leaves (especially young leaves).
        Environment: Flea beetles appear in hot and dry weather. Treatment: Spray nettle slurry on the leaves.
        Watering daily prevents this insect from appearing, as it does not like water.
</string>
    <string name="message_10">Disease Name: Spider mites.
        Symptoms: They suck the sap from plants. The leaves turn yellow. Small, whitish webs appear on the leaves. The plant withers.
        Environment: This pest thrives in hot and dry weather.
        Treatment: Spray water on the leaves, because spider mites do not like wet environments.
</string>
    <string name="message_11">Disease Name: Pests: Caterpillars.
        Symptoms: Caterpillars chew on leaves. Holes appear in the leaves.
        Environment: These pests start appearing in the spring, when butterflies begin to reproduce.
        Treatment: Spray the leaves with an organic anti-caterpillar product, such as pyrethrin, Bacillus thuringiensis, or Bordeaux mixture.
</string>
    <string name="message_12">Disease Name: Snails.
        Symptoms: A path of slime left behind by snails will appear on the leaves. Snails come to eat young leaves.
        Environment: They appear in wet environments or just after a period of rain.
        Treatment: To prevent snails from appearing, place wood shavings, ash, or hay around the plant so the snails are unable to climb onto the plants. You can also place a bowl of beer near the plant, a favorite with snails.
</string>
    <string name="message_13">Disease Name: Slugs.
        Symptoms: A path of slime left behind by slugs will appear on the leaves. Slugs come to eat young leaves.
        Environment: They appear in wet environments or just after a period of rain.
        Treatment: To prevent slugs from appearing, place wood shavings, ash, or hay around the plant so the slugs are unable to climb onto the plants. You can also place a bowl of beer near the plant, a favorite with slugs.
</string>
    <string name="message_14">Disease Name: Aphids.
        Symptoms: Aphids attack leaves and suck the liquid from them, causing plant growth to slow. Leaves dry out, turn yellow, and fall. The leaves and flowers are deformed.
        Environment: Aphids can appear starting in spring through the end of fall. Starting in spring, aphids multiply rapidly with the hatching of their eggs.
        Treatment: They are many techniques to prevent these pests from appearing. Spray nettle, fern, or rhubarb slurry on the leaves. Spray soapy water (made with black soap) onto the leaves. Ladybugs will eat aphid larvae.
</string>
    <string name="message_15">Use chamomile tea to control damping-off fungus, which often attacks young seedlings quite suddenly.
        Just add a spot of tea to the soil around the base of seedlings once a week or use it as a foliage spray.
</string>
    <string name="message_16">Follow the sun. Pay attention to how sunlight plays through your yard before choosing a spot for your garden.
</string>
    <string name="message_17">To remove the salt deposits that form on clay pots, combine equal parts white vinegar, rubbing alcohol and water in a spray bottle. Apply the mixture to the pot and scrub with a plastic brush. Let the pot dry before you plant anything in it.
</string>
    <string name="urdu">زبان کو اردو میں تبدیل کریں۔</string>
    <string name="about_us_msg">Welcome to KhetTech. Your ultimate gardening companion! Our app is designed to help you become a pro in gardening.
        Whether you\'re a seasoned green thumb or just starting out. With features like plant list,
        disease detection, journaling, and tips and tricks, we\'ve got you covered every step of the way.
        Our mission is to empower you with the knowledge and tools you need to grow healthy,
        thriving plants and enjoy the many rewards of gardening. Join our community of gardening enthusiasts and start growing your dream garden today!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="msg_motion_senesor_on">Motion Sensor On</string>
    <string name="msg_motion_detected">Alert!! There is some movement around your plant</string>
    <string name="update_word">Update</string>
    <string name="save">Save</string>
    <string name="delete_word">Delete</string>
    <string name="delete_plant">Plant deleted</string>
    <string name="update_plant">Plant updated</string>
    <string name="add_new_plant">Add a new plant</string>
    <string name="add_btn">Add</string>
    <string name="cancel_btn">Cancel</string>
    <string name="msg_no_camera_permission">Camera permission is denied</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="password_reset_email_sent_successfully">Password reset email sent successfully</string>
    <string name="failed_to_send_reset_email">Failed to send reset email</string>
    <string name="msg_login_successfull">Login successful</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect</string>
    <string name="please_fill_in_both_email_and_password">Please fill in both email and password</string>
    <string name="something_went_wrong">Something went wrong please try again later</string>
    <string name="report_submit">Your report has been submitted.</string>
    <string name="enter_description">Please enter a description.</string>
    <string name="already_rated">You have already rated!</string>
    <string name="rating_failed">Failed to check rating</string>
    <string name="user_not_logged_in">User not logged in.</string>
    <string name="feedback_msg">Thanks for your feedback!</string>
    <string name="failed_to_saved_rating">Failed to save rating</string>
    <string name="ok_btn">Ok</string>
    <string name="forget_password">Forget Your Password?</string>
    <string name="nursery_name_1">Sindh forestry</string>
    <string name="nursery_address_1">Block 3, Shah Faisal Colony 3 Shah Faisal Colony, Karachi, Karachi City, Sindh</string>
    <string name="nursery_phone_1">03012345576</string>
    <string name="nursery_name_2">Asif nursery</string>
    <string name="nursery_address_2">Rafi Bungalows Bagh e Ibrahim Society Shah Faisal Colony, Karachi, Karachi City, Sindh</string>
    <string name="nursery_phone_2">03122345677</string>
    <string name="nursery_name_3">Mehak nursery</string>
    <string name="name">Name: </string>
    <string name="address">Address: </string>
    <string name="phnoe">Phone No: </string>
</resources>