<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/background_green_stroke"
    android:backgroundTint="@color/loginBackground">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@drawable/background_green_stroke"
        android:text="@string/name" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@drawable/background_green_stroke"/>

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phnoe"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@drawable/background_green_stroke"/>
</LinearLayout>
