<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background_green_stroke">

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/icons8_contact_us_64"
        android:drawablePadding="8dp" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/rate_us"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/icons8_rate_64"
        android:drawablePadding="8dp" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/icons8_info_64"
        android:drawablePadding="8dp" />


    <TextView
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/icons8_logout_64"
        android:drawablePadding="8dp"/>

</LinearLayout>