<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cell_journal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:layoutDirection="ltr"
    android:padding="16dp">

    <TextView
        android:id="@+id/journal_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageViewPlant"
        tools:text="12 May 2024"/>

        <ImageView
            android:id="@+id/imageViewPlant"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/journal_entry"
            android:src="@drawable/plmaino" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/plant_name"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/imageViewPlant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/plant_description"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="@id/editTextName"
            app:layout_constraintEnd_toEndOf="@id/editTextName"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"
            app:layout_constraintStart_toStartOf="@id/editTextDescription"
            app:layout_constraintEnd_toEndOf="@id/editTextDescription">

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:text="@string/update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/button"
                app:layout_constraintBottom_toBottomOf="@id/buttonUpdate"
                app:layout_constraintStart_toEndOf="@id/buttonUpdate"
                app:layout_constraintTop_toTopOf="@id/buttonUpdate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>